<resources>
    <string name="app_name">Video Downloader</string>
    <string name="Continue">Continue</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="Instagram_app_is_not_installed">Instagram App is not installed</string>
    <string name="NEXT">Continue</string>
    <string name="SKIP">SKIP</string>
    <string name="TAGS">TAGS</string>
    <string name="Whatsapp_is_not_installed">Whatsapp is not installed</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="agent_android_mobile">Android (Mobile)</string>
    <string name="agent_custom">Custom</string>
    <string name="agent_default">Default</string>
    <string name="agent_hide_device">Hide device</string>
    <string name="agent_ios_mobile">iOS (Mobile)</string>
    <string name="agent_linux_desktop">Linux (Desktop)</string>
    <string name="agent_macos_desktop">macOS (Desktop)</string>
    <string name="agent_system">System</string>
    <string name="agent_web_view">WebView</string>
    <string name="agent_windows_desktop">Windows (Desktop)</string>
    <string name="all_your_browsing_history_will_be_deleted">All your browsing history will be deleted</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_alg1">ski#zwXrOhkTM?#eE</string>
    <string name="app_download_link">https://play.google.com/store/apps/details?id=videodownloader.privatebrowser.free.hd.statussaver</string>
    <string name="app_is_not_installed">App is not Installed</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backward">Backward</string>
    <string name="be_creative_with_our_cool_captions">Be creative with our cool captions, unique bio, and trending hashtags in your social profiles &amp; posts.</string>
    <string name="bio_copy">Bio copied!</string>
    <string name="bookmark_updated">Bookmark Updated</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cache_cleared_successfully">Cache Cleared Successfully</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="can_not_open_file_chooser">Can not open file chooser</string>
    <string name="cancel">Cancel</string>
    <string name="caption_copy">Caption copied!</string>
    <string name="captions">Captions</string>
    <string name="change_language">Change Language</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_action_with_your_link">Choose action with your Link</string>
    <string name="choose_your_language">Choose Your Preferred Language</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_data">Clear Cache/Data</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_the_detected_button">Click the detected button</string>
    <string name="click_the_video_to_play">Click the video to play</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect">Connect</string>
    <string name="copy">Copy</string>
    <string name="copy_link">Copy link</string>
    <string name="copy_url">Copy Url</string>
    <string name="copytxt">Copy</string>
    <string name="default_web_client_id">729285575677-dt5vrsas6v22v4ird8m1eugqja7m4eb8.apps.googleusercontent.com</string>
    <string name="define_zxingandroidembedded" />
    <string name="delete">Delete</string>
    <string name="disconnect">Disconnect</string>
    <string name="download">Download</string>
    <string name="download_story_reels_videos">Download Story &amp; Reels Videos</string>
    <string name="download_story_videos">Download Story, Videos</string>
    <string name="download_vid">Download Video</string>
    <string name="due_to_technical_fault_this_video_content">Due to technical fault, this video content is not available. Please go back and try again!</string>
    <string name="edit">Edit</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="expired">Expired</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_app_is_not_installed">Facebook App is not installed</string>
    <string name="facebook_donwload">facebook Donwload</string>
    <string name="facebook_downloader">Facebook Downloader</string>
    <string name="facebook_video_downloader">FB Video Downloader</string>
    <string name="failed_to_download_please_use_try_again">Failed to Download! Please use try again</string>
    <string name="failed_to_save_status">Failed to Save status</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="finish">FINISH</string>
    <string name="forward">Forward</string>
    <string name="free_application_for_download">100% free application for download all assets from social media</string>
    <string name="got_it">OK</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="history">History</string>
    <string name="homepage">Homepage</string>
    <string name="hostname">Hostname mismatch</string>
    <string name="how_it_works">How it works</string>
    <string name="how_to_download">How to Download</string>
    <string name="how_to_download_videos">How to Download Videos ?</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="if_you_reject_permission">If you reject permission,you can not use this feature \n\n Please turn on permissions at [Setting] &gt; [Permission]</string>
    <string name="images">Images</string>
    <string name="insecure_connection">Insecure connection</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_downloader">Instagram Downloader</string>
    <string name="instagram_video_downloader">Insta Video Downloader</string>
    <string name="internet_connection_error">Internet Connection Error!</string>
    <string name="invalid_path_selection_please_try_later">Invalid Path Selection. Please try later</string>
    <string name="invalide_date">Invalid date</string>
    <string name="item_view_role_description">Tab</string>
    <string name="link_is_invalid_please_try_other_file">Link is invalid. Please try other file</string>
    <string name="load_ad">Loading ad</string>
    <string name="loading_other_video_formats">Loading other video formats…</string>
    <string name="loc_p_key">N8TtGdfVg+CM17wY/vIxprWtmEyKqMrTKk3jCbPLVs0=</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="open">open</string>
    <string name="please_select_your_language">Please Select Your Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="select_option_with_your_link">How to Download Videos ?</string>
    <string name="settings">Settings</string>
    <string name="share_url">Share Url</string>
    <string name="tutorial">Tutorial</string>
</resources>