<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeImg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/realiveSocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/libetop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/realtive33"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/icon_33"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/fcon_for_shareurl" />

                <TextView
                    android:id="@+id/txt_33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_33"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:gravity="center"
                    android:text="@string/share_url"
                    android:textColor="@color/color_social_text"
                    android:textSize="@dimen/_10sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/realtive1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/icon_1"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/fcon_for_history" />

                <TextView
                    android:id="@+id/txt_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_1"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:gravity="center"
                    android:text="@string/history"
                    android:textColor="@color/color_social_text"
                    android:textSize="@dimen/_10sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/realtive5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/icon_5"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/image_copylink" />

                <TextView
                    android:id="@+id/txt_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_5"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:gravity="center"
                    android:text="@string/copy_url"
                    android:textColor="@color/color_social_text"
                    android:textSize="@dimen/_10sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/realtive3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/icon_3"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/help" />

                <TextView
                    android:id="@+id/txt_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_3"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:gravity="center"
                    android:text="@string/tutorial"
                    android:textColor="@color/color_social_text"
                    android:textSize="@dimen/_10sdp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/libebtm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/libetop"
            android:layout_marginTop="@dimen/_20sdp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/realtive4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center">

                <ImageView
                    android:id="@+id/icon_4"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/loader_ic_rateus"
                    app:tint="#595555" />

                <TextView
                    android:id="@+id/txt_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_4"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:gravity="center"
                    android:text="@string/rate_us"
                    android:textColor="@color/color_social_text"
                    android:textSize="@dimen/_10sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/realtive6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/icon_6"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/new_setings" />

                <TextView
                    android:id="@+id/txt_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_6"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/color_social_text"
                    android:textSize="@dimen/_10sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/realtive2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/icon_2"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/fcon_ad_fg_back" />

                <TextView
                    android:id="@+id/txt_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_2"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:gravity="center"
                    android:text="@string/backward"
                    android:textColor="@color/color_social_text"
                    android:textSize="@dimen/_10sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/realtive66"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/icon_66"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/fcon_ad_fg_next" />

                <TextView
                    android:id="@+id/txt_66"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_66"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:gravity="center"
                    android:text="@string/forward"
                    android:textColor="@color/color_social_text"
                    android:textSize="@dimen/_10sdp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/realiveSocial"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <View
            android:id="@+id/viewline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/md_divider" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_29sdp"
            android:layout_below="@+id/viewline"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ion_btn_arrow" />
    </RelativeLayout>
</RelativeLayout>
